--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
-<script src="script.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Rock Paper Scissors</title>
+
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+
+    <div class="content">
+        <div class="title">
+            <p id="game-title">Rock Paper and Scissors</p>
+        </div>
+        <div class="button">
+            <button class="button-start">Start</button>
+        </div>
+    </div>
+
+    <div class="footer">
+        &#169 Created by Mateusz Pedryc, 2023
+    </div>
+
+    <script src=""></script>
+</body>
+
+</html>
