Work on game logic
HTML file linked with JS. Created function started on START button click.
Added style for the button:onhover state.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <p id="game-title">Rock Paper and Scissors</p>
         </div>
         <div class="button">
-            <button class="button-start">Start</button>
+            <button class="button-main" id="btnStart">Start</button>
         </div>
     </div>
 
@@ -24,7 +24,7 @@
         &#169 Created by Mateusz Pedryc, 2023
     </div>
 
-    <script src=""></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
