--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
     <div class="content">
         <div class="title">
-            <p id="game-title">Rock Paper and Scissors</p>
+            <h1 id="game-title">Rock Paper and Scissors</h1>
         </div>
         <div class="button">
-            <button class="button-main" id="btnStart">Start</button>
+            <button class="button-general" id="btnStart">Start</button>
         </div>
     </div>
 
