Create game logic and rest of the ui
Finished game logic. Added new div for the round result text.
Start button changed to Reset button - hidden until end of the game.

Readme updated.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <div class="title">
             <h1 id="game-title">Rock Paper and Scissors</h1>
         </div>
+        <div class="round-result">
+        </div>
         <div class="button">
             <button class="button-general" id="btnStart">Start</button>
         </div>
